# safai

./: .env  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/cleaner/: audit.rs  graveyard.rs  mod.rs  plan.rs  safety.rs  types.rs
src-tauri/src/onboarding/: mod.rs  permissions.rs  state_store.rs  storage.rs  types.rs
src-tauri/src/scanner/: classify.rs  fs_guard.rs  meta_ext.rs  mod.rs  run.rs  summary.rs  work_budget.rs
src-tauri/src/scanner/activity/: kill.rs  mod.rs  sample.rs  stream.rs  types.rs
src-tauri/src/scanner/dupes/: mod.rs  pipeline.rs  stream.rs
src-tauri/src/scanner/junk/: catalog.rs  mod.rs  scan.rs
src-tauri/src/scanner/largeold/: mod.rs  pipeline.rs  stream.rs
src-tauri/src/scanner/malware/: catalog.rs  heuristics.rs  mod.rs  scan.rs  stream.rs  types.rs
src-tauri/src/scanner/privacy/: catalog.rs  mod.rs  scan.rs
src-tauri/src/scanner/startup/: linux.rs  mac.rs  mod.rs  scan.rs  types.rs  windows.rs
src-tauri/src/scanner/treemap/: cache.rs  layout.rs  mod.rs  stream.rs  tree.rs
src-tauri/src/scheduler/: cadence.rs  mod.rs  runner.rs
src-tauri/src/volumes/: mod.rs  process.rs  source.rs  types.rs
src/components/: CacheFreshness.tsx  ConfirmDeleteModal.tsx  CountUp.tsx  Icon.tsx  OSChip.tsx  RadialSweep.tsx  SafaiSidebar.tsx  SafaiToolbar.tsx  SafaiWindow.tsx  Suds.tsx  UpdateBanner.tsx  VirtualList.tsx
src/lib/: activity.ts  activityStream.ts  animation.test.ts  animation.ts  cacheInvalidation.ts  cleaner.ts  duplicates.ts  events.ts  format.test.ts  format.ts  ipc.ts  junk.ts  largeold.ts  malware.ts  moods.ts  nav.ts  onboarding.ts  platform.ts  privacy.ts  scanCache.ts  scanEvents.test.ts  scanner.ts  settings.ts  startup.ts  treemap.ts  updater.ts  volumes.ts
src/screens/: Activity.tsx  Disk.tsx  Duplicates.tsx  Junk.tsx  LargeOld.tsx  Malware.tsx  Memory.tsx  Onboarding.tsx  Placeholder.tsx  Privacy.tsx  Settings.tsx  SmartScan.tsx  SmartScanRunning.tsx  Startup.tsx
src/styles/: safai.css
