[package]
name = "safai"
version = "0.1.0"
description = "Safai — open-source cross-platform system cleaner"
authors = ["Safai contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "safai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# — cross-platform disk telemetry. `default-features=false` so we
# don't drag in the component / network / user refresh sources we never
# sample — every unused refresh is a syscall per tick.
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }
# — streaming filesystem walker. jwalk shells out to rayon internally
# so a home-dir scan stays parallel; we check atomics inside the per-dir
# closure so pause/cancel stop work within the next directory batch.
jwalk = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
